fix: saved all files

--- a/vuyani.html
+++ b/vuyani.html
@@ -202,7 +202,7 @@
         
         <div class="section floor-plan" id="layout" style="text-align: center;">
             <h2>Want to save yourself a room?</h2>
-            <p style="margin-bottom: 15px;">If you like what you see, then don't hesitate to click <a href="https://wa.me/27774377288"><button>Apply</button></a> </p>
+            <p style="margin-bottom: 15px;">If you like what you see, then don't hesitate to click <a href="https://wa.me/27774377288?text=Hi%20Campus%20Collective,%20I%20am%20interested%20in%20applying%20for%20a%20room%20at%20Vuyani.%20Can%20you%20please%20help%20me%20with%20the%20next%20steps?"><button>Apply</button></a> </p>
             <p style="font-style: italic; font-size: 0.85rem; color: #666;">**Note:** Self funded student can move in at anytime, but NSFAS funded should wait for moving in cycle to be open by NSFAS.</p>
         </div>
     </div>
