fix: confirmed changes

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -78,6 +78,12 @@
     <script>
         // --- API CONFIGURATION ---
         // CORRECTED API ENDPOINTS to match your server routes (/api/auth/seller/...)
+       const API_URL = '/api/auth';
+       const res = await fetch(`${API_URL}/forgot-password`, {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ email })
+});
         const REQUEST_API_URL = 'http://localhost:8080/api/auth/seller/request-reset-code'; 
         const RESET_API_URL = 'http://localhost:8080/api/auth/seller/reset-password'; 
         
