fix: confirmed changes

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -89,6 +89,14 @@
     const resetPasswordBtn = document.getElementById('reset-password-btn');
 
     // Helper: Show Message
+    function initializeForm() {
+    const flowStatus = document.getElementById('flow-status');
+    if (flowStatus) {
+        flowStatus.textContent = 'Step 1: Enter your email to receive a confirmation code.';
+    }
+    requestForm.classList.remove('hidden-strict');
+    resetForm.classList.add('hidden-strict');
+}
     function showMessage(type, text) {
         messageArea.textContent = text;
         messageArea.classList.remove('hidden', 'bg-green-100', 'text-green-700', 'bg-red-100', 'text-red-700');
