fix: confirmed changes

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -6,6 +6,7 @@
     <title>Forgot Password - Campus Collective</title>
     <link rel="icon" type="image/x-icon" href="Images/campus collective icon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         .hidden-strict { display: none !important; }
     </style>
@@ -37,10 +38,17 @@
                 <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">6-Digit Code</label>
                 <input type="text" id="code" required class="w-full p-3 mt-1 border rounded-lg dark:bg-gray-700 dark:text-white" placeholder="123456">
             </div>
-            <div>
+
+            <div class="relative">
                 <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">New Password</label>
                 <input type="password" id="new-password" required class="w-full p-3 mt-1 border rounded-lg dark:bg-gray-700 dark:text-white" placeholder="••••••••">
             </div>
+
+            <div class="relative">
+                <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">Confirm New Password</label>
+                <input type="password" id="confirm-password" required class="w-full p-3 mt-1 border rounded-lg dark:bg-gray-700 dark:text-white" placeholder="••••••••">
+            </div>
+
             <button type="submit" id="reset-password-btn" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-3 rounded-lg transition">
                 Reset Password
             </button>
@@ -50,6 +58,8 @@
             <a href="choose login.html" class="text-blue-600 hover:underline text-sm">Back to Login</a>
         </div>
     </div>
+
+    
 
     <script>
         const API_URL = '/api/auth';
@@ -85,7 +95,7 @@
 
                 if (res.ok) {
                     showMessage('success', 'Code sent! Please check your email inbox.');
-                    document.getElementById('saved-email').value = email; // Save for Step 2
+                    document.getElementById('saved-email').value = email;
                     requestForm.classList.add('hidden-strict');
                     resetForm.classList.remove('hidden-strict');
                     flowStatus.textContent = 'Step 2: Enter the code and your new password.';
@@ -93,19 +103,32 @@
                     showMessage('error', data.message || 'Email not found.');
                 }
             } catch (err) {
-                showMessage('error', 'Connection error. Is the server running?');
+                showMessage('error', 'Connection error. Please try again.');
             } finally {
                 requestPasswordBtn.disabled = false;
                 requestPasswordBtn.textContent = 'Send Code';
             }
         });
 
-        // STEP 2: Reset the password
+        // STEP 2: Reset the password with confirmation check
         resetForm.addEventListener('submit', async (e) => {
             e.preventDefault();
-            const email = document.getElementById('saved-email').value; // Retrieve the saved email
-            const code = document.getElementById('code').value;
+            const email = document.getElementById('saved-email').value;
+            const code = document.getElementById('code').value.trim();
             const newPassword = document.getElementById('new-password').value;
+            const confirmPassword = document.getElementById('confirm-password').value;
+
+            // 1. Check if passwords match
+            if (newPassword !== confirmPassword) {
+                showMessage('error', 'Passwords do not match. Please re-enter them.');
+                return;
+            }
+
+            // 2. Length check (standard security)
+            if (newPassword.length < 6) {
+                showMessage('error', 'Password must be at least 6 characters long.');
+                return;
+            }
 
             resetPasswordBtn.disabled = true;
             resetPasswordBtn.textContent = 'Resetting...';
