--- a/czra more about us.html
+++ b/czra more about us.html
@@ -124,10 +124,12 @@
 
             <p>At Campus Collective, we understand that finding the right accommodation can be a daunting task, especially for students. That's why we're here to assist you in finding the best accommodations that fit your requirements.</p>
             
-            <p>Our team is dedicated to providing you with a hassle-free experience, from searching for accommodations to securing your spot. We work with a wide range of accommodation providers to ensure that you have access to the best options available.</p>
-
+            <p>Our team is dedicated to providing you with a hassle-free experience, from searching for accommodations to securing your spot. We work with a wide range of accommodation providers to ensure that you have access to the best options available. 
+                We are also dedicated to helping students with applications for universities and colleges, advising them on courses and providing guidance throughout the application process free of charge.</p>
+            
             <h2>Services we offer:</h2>
             <ol>
+                <li>We help students with applications for universities and colleges.</li>
                 <li>We unite Students with their ideal accommodation.</li>
                 <li>We help Accommodation providers to fill their empty spaces.</li>
                 <li>We help students advertise their small businesses.</li>
