--- a/Learn More.html
+++ b/Learn More.html
@@ -50,20 +50,19 @@
 
         /* --- 🏆 NAVIGATION (MATCHING INDEX.HTML) --- */
         nav {
-            position: fixed;
-            top: 0;
-            left: 0; /* 🏆 FIX: Set to 0 for side-to-side coverage */
-            width: 100%; /* 🏆 FIX: Full width */
-            height: 70px;
-            background: rgba(0,0,0,0.85);
-            backdrop-filter: blur(10px);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 5%;
-            z-index: 2000;
-            border-bottom: 1px solid rgba(255,255,255,0.1);
-        }
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 70px;
+    background: rgba(0,0,0,0.9);
+    backdrop-filter: blur(10px);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 5%;
+    z-index: 2000;
+}
 
         .nav-logo-text { color: white; font-weight: 800; font-size: 1.2rem; letter-spacing: 1px; }
 
@@ -104,16 +103,17 @@
 
         /* --- SEARCH SECTION --- */
         .search-container {
-            width: 92%;
-            max-width: 900px;
-            margin: 0 auto 40px;
-            background: var(--glass);
-            padding: 10px;
-            border-radius: 60px;
-            display: flex;
-            align-items: center;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.3);
-        }
+    width: 90%;
+    max-width: 600px;
+    margin: 0 auto 30px;
+    background: var(--glass);
+    padding: 15px;
+    border-radius: 30px; /* Adjusted for mobile */
+    display: flex;
+    flex-direction: column; /* Stack on mobile */
+    gap: 10px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+}
 
         #search-filter {
             border: none;
@@ -147,14 +147,31 @@
         }
 
         /* --- ACCOMMODATION GRID --- */
-        main { width: 92%; max-width: 1200px; margin: 0 auto; flex-grow: 1; }
-        
-        .accommodation-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-            gap: 30px;
-            padding-bottom: 60px;
-        }
+        main { 
+    width: 90%; 
+    max-width: 1200px; 
+    margin: 0 auto; 
+    flex-grow: 1; 
+}
+
+.accommodation-grid {
+    display: grid;
+    grid-template-columns: 1fr; /* Default to 1 column for mobile */
+    gap: 25px;
+    padding-bottom: 60px;
+}
+
+@media (min-width: 768px) {
+    .accommodation-grid {
+        grid-template-columns: repeat(2, 1fr); /* 2 columns for tablets */
+    }
+}
+
+@media (min-width: 1024px) {
+    .accommodation-grid {
+        grid-template-columns: repeat(3, 1fr); /* 3 columns for desktop */
+    }
+}
 
         .accommodation {
             background: var(--glass);
